"#" items refer to tickets. See <http://dev.openguides.org/report/9> for details.

More detailed changelogs can be found at
<http://dev.openguides.org/log/trunk>.

0.70    ?
        Updated URLs for Leaflet JavaScript and CSS.
        Added meta descriptions to headers of map and list index pages.

0.69    07 July 2012
        The output of the "show_missing_metadata" action is now alphabetised.
        There's also now an option to view the results on a map. (#296 & #294).
        Fixed a JavaScript escaping issue for nodes with apostrophes in names.

0.68    21 May 2012
        Made sure that maps are centred and zoomed properly even when they only
          contain one point.
        Made preferences default to never expiring.
        Fixed POST bug introduced with whitespace redirection in version 0.66.

0.67    07 May 2012
        Switched from the Google Maps API to the Leaflet mapping library.
          To make this work, set use_leaflet = 1 in your wiki.conf, and ensure
          that div#map_index_canvas is given a non-zero height in your
          stylesheet (you may also want to style div#map_index_node_list and
          div#node_map_canvas).  Google Maps support is retained for those
          who fear change, but is no longer actively maintained.
        Added support for indexing on category and locale at the same time.
          As part of this, action=index now uses a new form of parameters, so
          instead of e.g.
            action=index;index_type=locale;index_value=holborn
          you should use
            action=index;loc=holborn
          or indeed
            action=index;cat=pubs;loc=holborn
          Format params such as format=map work as before.  Old-style URLs
          will automatically redirect to new-style ones.
        Added project metadata to Build.PL (#285).
        Skip Build.PL questions if AUTOMATED_TESTING=1 (#291)
        Added a basic stylesheet, installed into the static_path directory.